# Saber-OT

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  seedA.txt
emp-ot/: emp-ot.h  saberot.h
emp-ot/kyber/: mrkyber.h
emp-ot/mr/: backup.h
emp-ot/saber/: SABER_indcpa.h  SABER_params.h  cbd.h  code  code1  cpucycles.h  fips202.h  mrsaber.h  npsaber_v1.h  npsaber_v2.h  out.txt  pack_unpack.h  poly.c  poly.h  poly_mul.h  rng.h  saberKE.cpp  saberKE0.cpp  saberKE1.cpp  saberMR.cpp  saberot.h  simplesaber.h
test/: CMakeLists.txt  mr_kyber.cpp  ot.cpp  random.txt  saber.cpp  test.h
test/KyberOT/: KyberOT.h  params.h
